Fix navbar z-index

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -40,6 +40,11 @@ main {
   width: 100%;
 }
 
+.map-on-page {
+  position: fixed;
+  top: 80px;
+}
+
 #mapDiv {
   display: flex;
   flex-direction: column;
@@ -165,6 +170,7 @@ main {
 #fixed {
   position: fixed;
   width: 100%;
+  z-index: 10;
 }
 
 .spacer {
@@ -181,7 +187,6 @@ main {
   width: 90vw;
   background: rgba(238, 238, 238, 0.9);
   padding: 40px 20px;
-  z-index: 10;
 }
 
 #news h1 {
@@ -196,7 +201,7 @@ main {
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
-  z-index: 10;
+  z-index: 9;
 }
 
 .news-card {
